# fastapi-keycloak-example

./: .gitignore  Containerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: b07e227e8393_initial_migration_create_users_table.py
src/app/: main.py
src/app/auth/: routers.py
src/app/core/: clients.py  config.py  database.py  logging.py  security.py
src/app/users/: models.py  routers.py
src/fastapi_keycloak_app/: main.py
src/fastapi_keycloak_app/auth/: routers.py  schemas.py
src/fastapi_keycloak_app/core/: clients.py  config.py  database.py  security.py
src/fastapi_keycloak_app/users/: models.py  routers.py  schemas.py
